--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 			<version>1.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>de.mkammerer</groupId>
+			<artifactId>argon2-jvm</artifactId>
+			<version>2.11</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
