Implementing JWT Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
+# JWT
+security.jwt.secret=dfg7fgd7sa897hjkljk0ñlkl894s
+security.jwt.issuer=Main
+#la sesion dura una semana
+security.jwt.ttlMillis=604800000
