--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
 # JWT
-security.jwt.secret=dfg7fgd7sa897hjkljk0ñlkl894s
+security.jwt.secret=ghk45jgherogho834go3h4g
 security.jwt.issuer=Main
 #la sesion dura una semana
 security.jwt.ttlMillis=604800000
